<resources>
    <string name="app_name">SmartLock</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="usuario">Usuario</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="img1">img1</string>
    <string name="contrasenia">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="omc">Olvide mi contraseña</string>
    <string name="title_activity_puertas">Puertas</string>
    <string name="title_activity_registrarse">registros de invitados</string>
    <string name="title_activity_principal">Pantalla Principal</string>
    <string name="title_activity_invitar">Invitar</string>
    <string name="generar">Generar</string>
    <string name="puertaPrincipal">Puerta principal</string>
    <string name="puertas">Puertas</string>
    <string name="invitar">Invitar</string>
    <string name="registrarUsuario">Registrar usuario</string>
    <string name="eliminarUsuario">Eliminar usuario</string>
    <string name="historial">Historial</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
