<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#ffffff">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:id="@+id/imageView2"
            android:src="@drawable/logosl"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/img1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="#ffffff">

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/etu"
            android:hint="@string/usuario"
            android:layout_weight="1"
            android:layout_gravity="bottom"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:backgroundTint="#ffffff">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etc"
            android:layout_gravity="bottom"
            android:hint="@string/contrasenia"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ingresar"
            android:id="@+id/btningresar"
            android:textSize="18sp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/omc"
            android:id="@+id/btnolvide"
            android:textSize="18sp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="registrarse como invitado"
            android:id="@+id/btnguest"
            android:layout_gravity="center"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>